<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#de000000"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="5sp"
        android:layout_gravity="center"
        android:text="@string/upload" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="37dp" >

        <LinearLayout
            android:id="@+id/viewLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:srcCompat="@drawable/ic_visible_mono"
                android:contentDescription="@string/view_photo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="#99000000"
                android:lineSpacingExtra="4sp"
                android:gravity="center_horizontal"
                android:text="@string/view" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cameraLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:srcCompat="@drawable/ic_camera_black_24px"
                android:contentDescription="@string/take_photo_with_camera"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="#99000000"
                android:lineSpacingExtra="4sp"
                android:gravity="center_horizontal"
                android:text="@string/camera" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/galleryLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:srcCompat="@drawable/ic_gallery_mono"
                android:contentDescription="@string/image_upload_form_gallery"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="#99000000"
                android:lineSpacingExtra="4sp"
                android:gravity="center_horizontal"
                android:text="@string/gallery" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
