<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_16dp">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_your_sharetrip_account"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_24sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/your_profile_photos_booking_guest_list_will_be_permanently_deleted"
            app:layout_constraintEnd_toEndOf="@+id/textView15"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <Button
            android:id="@+id/confirmDeleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:letterSpacing=".12"
            android:text="@string/confirm_delete_account"
            android:textColor="@color/primary_main"
            android:textSize="@dimen/text_size_14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView16"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/cancel"
            android:textSize="@dimen/text_size_14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:letterSpacing=".12"
            app:layout_constraintEnd_toEndOf="@+id/confirmDeleteButton"
            app:layout_constraintStart_toStartOf="@+id/confirmDeleteButton"
            app:layout_constraintTop_toBottomOf="@+id/confirmDeleteButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>