<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.deleteaccount.DeleteAccountFragment">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/accountDelete">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/deletion_of_your_account_is_permanent"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/endGuideline"
                    app:layout_constraintStart_toStartOf="@+id/startGuideline"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/your_profile_photos_booking_guest_list_will_be_permanently_deleted"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@id/endGuideline"
                    app:layout_constraintStart_toStartOf="@+id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/why_are_you_deleting_your_account"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView11"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />


                <RadioGroup
                    android:id="@+id/reasonList"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    app:layout_constraintEnd_toEndOf="@id/endGuideline"
                    app:layout_constraintStart_toEndOf="@id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@+id/textView14">

                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/commentLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:hint="@string/please_explain"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:layout_constraintEnd_toStartOf="@+id/endGuideline"
                    app:layout_constraintStart_toStartOf="@+id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@+id/reasonList">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/commentText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"/>
                </com.google.android.material.textfield.TextInputLayout>

<!--                <com.google.android.material.textfield.TextInputLayout-->
<!--                    android:id="@+id/input_layout_last_name"-->
<!--                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginEnd="4dp"-->
<!--                    android:layout_marginRight="4dp"-->
<!--                    app:boxBackgroundColor="@android:color/transparent"-->
<!--                    android:hint="@string/please_explain"-->
<!--                    app:layout_constraintEnd_toStartOf="@+id/endGuideline"-->
<!--                    app:layout_constraintStart_toStartOf="@+id/startGuideline"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/reasonList">-->

<!--                    <com.google.android.material.textfield.TextInputEditText-->
<!--                        android:id="@+id/last_name_input_edit_text"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:imeOptions="actionNext"-->
<!--                        android:inputType="textMultiLine"-->
<!--                        android:paddingBottom="30dp"-->
<!--                        android:paddingTop="30dp"-->
<!--                        android:maxLines="1" />-->

<!--                </com.google.android.material.textfield.TextInputLayout>-->

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/startGuideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/spacing_16dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/endGuideline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/spacing_16dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/accountDelete"
            style="@style/IndigoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteY="673dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>